# first-class-families

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  dev-stack.yaml  first-class-families.cabal  flake.nix  stack.yaml
.github/workflows/: ci.yml  haskell-ci.yml
src/: Fcf.hs
src/Fcf/: Classes.hs  Combinators.hs  Core.hs  Data.hs  Utils.hs
src/Fcf/Class/: Applicative.hs  Bifunctor.hs  Eq.hs  Foldable.hs  Functor.hs  Monad.hs  Monoid.hs  Ord.hs
src/Fcf/Class/Eq/: Exp.hs  Internal.hs
src/Fcf/Class/Monoid/: Types.hs
src/Fcf/Data/: Bool.hs  Common.hs  Function.hs  List.hs  Nat.hs  Symbol.hs  Traversable.hs  Tuple.hs
test/: NegativeTests.hs  doctest.hs  test.hs
