name:                first-class-families
version:             0.7.0.0
synopsis:
  First class type families
description:
  First class type families,
  eval-style defunctionalization
  .
  See "Fcf".
homepage:            https://github.com/Lysxia/first-class-families#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2018 Li-yao Xia
category:            Other
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10
tested-with:
  GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.1

library
  hs-source-dirs:      src
  exposed-modules:
    Fcf
    Fcf.Core
    Fcf.Combinators
    Fcf.Data.Bool
    Fcf.Data.Common
    Fcf.Data.List
    Fcf.Data.Nat
    Fcf.Classes
    Fcf.Utils
  build-depends:
    -- This upper bound is conservative.
    base >= 4.9 && < 4.14
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite fcf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  default-language:    Haskell2010
  build-depends:
    base,
    first-class-families

test-suite fcf-doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest.hs
  default-language:    Haskell2010
  if impl(ghc >= 8.6)
    build-depends:
      base,
      doctest,
      Glob
  else
    buildable: False

source-repository head
  type:     git
  location: https://github.com/Lysxia/first-class-families
